# Visible

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_ASSESSMENT.md  Dockerfile  LICENSE  Makefile  NEXT_STEPS_IMPLEMENTATION.md  README.md  app.py  battlecard-api-service.js  battlecard-app.tsx  battlecard-dashboard.tsx  battlecard-generator-component.tsx  battlecard-readme.md  config.yaml  docker-compose.yaml  docker-compose.yml  enhanced-battlecard-agent.py  enhancement-plan.md  prompt-management-system.py  pyproject.toml  requirements.txt  setup.cfg
ai_orchestration/src/: base_agent.py  battlecard_generation.py  contextual_tagger.py  data_cleaning.py  data_collection.py  expert_system.py  insights_generation.py  nlp_summarization.py  orchestration.py  payer_intel_agent.py  product_analysis.py  quality_checker.py
backend/: .env.example  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/ai/: base.py  factory.py
backend/app/core/: config.py  database.py  exceptions.py  middleware.py  security.py
backend/app/crud/: base.py  crud_customer.py
backend/app/db/: base.py
backend/app/schemas/: battlecard.py  customer.py  user.py  validation.py
backend/app/services/: ai_orchestrator.py  cache.py
backend/src/: main.py
backend/src/agents/: aggregator_agent.py  competitive_intelligence_agent.py  objection_handling_agent.py  orchestration_agent.py  summarization_agent.py
backend/src/core/: utils.py
backend/src/routes/: battlecards.py
backend/tests/: conftest.py
backend/tests/ai/: test_aggregator.py
backend/tests/api/: test_ai.py  test_battlecards.py  test_customers_api.py
backend/tests/crud/: test_crud_customer.py
config/: expert_system.yaml
frontend/: Dockerfile
frontend/src/: App.tsx  App.vue  index.tsx  theme.ts
frontend/src/api/: api.ts  battlecards.ts  client.ts  competitors.ts  customers.ts  insights.ts  notifications.ts  search.ts  (+2 more)
supabase/migrations/: 20250817023313_empty_lab.sql  20250817025323_blue_darkness.sql
templates/: index.html
tests/: test_expert_system.py  test_expert_system_cache.py  test_expert_system_recommendations.py  test_expert_system_scoring.py  test_integration.py
(+45 files in other folders)
