[tool.bandit]
exclude_dirs = ["tests", "venv", ".git", "__pycache__", "build", "dist"]
skips = ["B101"]  # Skip assert statements
targets = ["ai_orchestration"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ai_orchestration"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ai-orchestration"
version = "0.1.0"
description = "AI-driven battlecard generation system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/battlecard-generation"
keywords = ["ai", "battlecards", "competitive-analysis"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.0"
beautifulsoup4 = "^4.9.3"
pandas = "^1.3.0"
numpy = "^1.21.0"
nltk = "^3.6.0"
spacy = "^3.1.0"
scikit-learn = "^0.24.0"
transformers = "^4.11.0"
torch = "^1.9.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.0"
python-dotenv = "^0.19.0"
tenacity = "^8.0.0"
loguru = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
pytest-asyncio = "^0.15.0"
pytest-cov = "^2.12.0"
httpx = "^0.18.0"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.0"
flake8 = "^3.9.0"
pylint = "^2.9.0"
pre-commit = "^2.15.0"
bandit = "^1.7.0"
safety = "^1.10.3"

[tool.poetry.scripts]
ai-orchestration = "ai_orchestration.cli:main" 